--- a/index.html
+++ b/index.html
@@ -7,65 +7,63 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <div>Heder Logo</div>
-        <div>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="link">
             <a href=../odin-recipes/index.html>header link one</a>
             <a href=..odin-recipes/recipes/biryani.html>header link two</a>  
             <a href=..odin-recipes/recipes/noodles.html>header link three</a> 
         </div>
     </div>
-    <div>
-        <div>
-            <div>This website is awesome</div>
-            <div>
+    <div class="hero">
+        <div class="text">
+            <div class="main">This website is awesome</div>
+            <div class="secondary">
                 This website has some subtext that goes here and under the main 
                 title. It's smaller font and the color is lower contrast
             </div>
-            <div>
-                <button>Sign up</button>
-            </div>
+            <button>Sign up</button>
         </div>
-        <div>this is a placeholder for an image</div>
+        <div class="image">this is a placeholder for an image</div>
     </div>
-    <div>
-        <div>Some random information.</div>
-        <div>
-            <div>
-                <div></div>
+    <div class="information">
+        <div class="information-header">Some random information.</div>
+        <div class="main-container">
+            <div class="container">
+                <div class="box"></div>
                 <div>this is some subtext under an illustration or image</div>
             </div>
-            <div>
-                <div></div>
+            <div class="container">
+                <div class="box"></div>
                 <div>this is some subtext under an illustration or image</div>
             </div>
-            <div>
-                <div></div>
+            <div class="container">
+                <div class="box"></div>
                 <div>this is some subtext under an illustration or image</div>
             </div>
-            <div>
-                <div></div>
+            <div class="container">
+                <div class="box"></div>
                 <div>this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
-    <div>
-        <div>
+    <div class="quote">
+        <div class="quote-text">
             This ia an inspiring quote and testimonial from a customer. Maybe it's
             just filling up space, or maybe people will actually read it. Who Knows? 
             All I know is that it looks nice.
         </div>
-        <div>-Thor, God of Thunder</div>
+        <div class="credit">-Thor, God of Thunder</div>
     </div>
-    <div>
+    <div class="call-to-action">
         <div>
             <div>Call to action! It's time!</div>
             <div>Sign up for our product by clicking that button right over there</div>
         </div>
-        <div>
+        <div class="call-to-action-button">
             <button>Sign up</button>
         </div>
     </div>
-    <div>Copyright © The Odin Project 2021</div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
