--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <div class="logo">Header Logo</div>
         <div class="link">
-            <a href=../odin-recipes/index.html>header link one</a>
-            <a href=..odin-recipes/recipes/biryani.html>header link two</a>  
-            <a href=..odin-recipes/recipes/noodles.html>header link three</a> 
+            <a href=../odin-recipes/index.html>Odin recipes</a>
+            <a href=..odin-recipes/recipes/biryani.html>Biryani</a>  
+            <a href=..odin-recipes/recipes/noodles.html>Noodles</a> 
         </div>
     </div>
     <div class="hero">
@@ -24,7 +24,7 @@
             </div>
             <button>Sign up</button>
         </div>
-        <div class="image">this is a placeholder for an image</div>
+        <img src = "placeholder.jpg">
     </div>
     <div class="information">
         <div class="information-header">Some random information.</div>
@@ -49,11 +49,11 @@
     </div>
     <div class="quote">
         <div class="quote-text">
-            This ia an inspiring quote and testimonial from a customer. Maybe it's
-            just filling up space, or maybe people will actually read it. Who Knows? 
-            All I know is that it looks nice.
+            The purpose of life is not to br happy. It is to be useful, to be
+            honorable, to be compassionate, to have it make some difference 
+            that you have lived and lived well.
         </div>
-        <div class="credit">-Thor, God of Thunder</div>
+        <div class="credit">-Ralph Waldo Emerson</div>
     </div>
     <div class="call-to-action">
         <div>
